--- a/templates/external/login.html.twig
+++ b/templates/external/login.html.twig
@@ -3,25 +3,26 @@
     <div class="container">
         <form method="post" action="{{ path('login') }}">
             <div class="form-group">
-                <label for="loginEmail">Email Address</label>
-                <input type="email"
+                <label for="loginUsername">Username</label>
+                <input type="text"
                        class="form-control"
-                       id="loginEmail"
-                       name="email"
-                       placeholder="Your subscription email" />
+                       id="loginUsername"
+                       name="_username"
+                       placeholder="Your private username" />
             </div>
             <div class="form-group">
                 <label for="loginPwd">Password</label>
                 <input type="password"
                        class="form-control"
                        id="loginPwd"
-                       name="pwd"
+                       name="_password"
                        placeholder="Your password" />
                 <small id="pwdHelp"
                        class="form-text text-muted">
                     We will NEVER ask your password.
                 </small>
             </div>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
