--- a/templates/external/subscribe.html.twig
+++ b/templates/external/subscribe.html.twig
@@ -51,7 +51,9 @@
                 </small>
             </div>
             
-            <button type="submit" class="btn btn-primary">Subscribe</button>
+            <button type="submit"
+                    name="subscribeSubmit"
+                    class="btn btn-primary">Subscribe</button>
         </form>
     </div>
 {% endblock %}
