--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Moneypole{% endblock %}</title>
+        <title>
+            Moneypole
+            {% block title %}{% endblock %}
+        </title>
         <link rel="stylesheet"
               href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -20,7 +23,12 @@
         {% block javascripts %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header>
+            {% include 'components/menu.html.twig' %}
+        </header>
+        <div class="container-fluid">
+            {% block body %}{% endblock %}
+        </div>
         {% include 'components/flashes.html.twig' %}
     </body>
 </html>
