--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,6 +1,15 @@
 {% extends 'connected.html.twig' %}
 {% block body %}
     <div class="container">
-        HALO
+        <div class="card-columns">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Companies
+                    </h5>
+                    
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
