--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -5,9 +5,31 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">
-                        Companies
+                        Votre protefeuille
                     </h5>
-                    
+                    <ul class="list-group list-group-flush">
+                        {% for wallet in wallets %}
+                            <li class="list-group-item">
+                                {{ wallet.currency.symbol }}
+                                {{ wallet.amount }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Votre société
+                    </h5>
+                    <div class="card-body">
+                        {% if company is empty %}
+                            Vous n'avez pas encore de société.
+                            Le jeu serait bien plus intéressant si vous
+                            <a href="{{ path('company_create') }}">montiez votre société et vous lanciez</a> !
+                        {% else %}
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
