Nouvelle gestion du service web, ajout market, finalisation creation societe

--- a/templates/company/create.html.twig
+++ b/templates/company/create.html.twig
@@ -65,7 +65,7 @@
                                 </td>
                                 <td>
                                     <input type="radio"
-                                           name="company_city"
+                                           name="city"
                                            required="required"
                                            value="{{ city.getId }}" />
                                 </td>
