--- a/templates/connected.html.twig
+++ b/templates/connected.html.twig
@@ -20,6 +20,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
                 crossorigin="anonymous"></script>
+        {% if web._d3 %}<script src="https://d3js.org/d3.v5.min.js"></script>{% endif %}
         {% block javascripts %}{% endblock %}
     </head>
     <body>
