--- a/templates/company/detail.html.twig
+++ b/templates/company/detail.html.twig
@@ -1,6 +1,32 @@
 {% extends 'connected.html.twig' %}
 {% block body %}
     <div class="container">
-        HELLO WORLD
+        <h2>{{ company.name }}</h2>
+        <ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li>
+</ul>
+        {% for buildings in company.buildings %}
+        <div class="card text-white {% include 'components/building-colors.html.twig' %}">
+            <div class="card-header">
+                {% include 'components/building-names.html.twig' %}
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>{% endfor %}
+        
     </div>
 {% endblock %}
