--- a/templates/company/detail.html.twig
+++ b/templates/company/detail.html.twig
@@ -41,6 +41,9 @@
                         </div>
                     </li>
                 {% endfor %}
+                <li class="list-group-item">
+                    <a href="#">Effectuer un dépot (autre devise...)</a>
+                </li>
                 </ul>
             </div>
             <div id="companyBuildings"
