Tentative de remove building sur namedentity, echec, reprise et ajout ctrl pour move wallets

--- a/templates/components/building-colors.html.twig
+++ b/templates/components/building-colors.html.twig
@@ -1,6 +1,6 @@
-{% if building.btype == 'factory' %}bg-danger
-{% elseif building.btype == 'shop' %}bg-success
-{% elseif building.btype == 'warehouse' %}bg-warning
-{% elseif building.btype == 'office' %}bg-info
+{% if building.etype == 'factory' %}bg-danger
+{% elseif building.etype == 'shop' %}bg-success
+{% elseif building.etype == 'warehouse' %}bg-warning
+{% elseif building.etype == 'office' %}bg-info
 {% else %}bg-secondary
 {% endif %}
