--- a/templates/components/building-names.html.twig
+++ b/templates/components/building-names.html.twig
@@ -1,6 +1,6 @@
-{% if building.btype == 'factory' %}Usine
-{% elseif building.btype == 'shop' %}Boutique
-{% elseif building.btype == 'warehouse' %}Entrepot
-{% elseif building.btype == 'office' %}Bureaux
+{% if building.etype == 'factory' %}Usine
+{% elseif building.etype == 'shop' %}Boutique
+{% elseif building.etype == 'warehouse' %}Entrepot
+{% elseif building.etype == 'office' %}Bureaux
 {% else %}Générique
 {% endif %}
